# pixellemonade

./: .dockerignore  .drone.yml  .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yaml  manage.py  production.docker-compose.yaml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci-cd.yml
ci-cd/: set_up_buckets.py
docs/: mkdocs.yml  requirements.txt
docs/docs/: api.md  configuration.md  motivasion.md  search.md  teminology.md
pixellemonade/: asgi.py  urls.py  wsgi.py
pixellemonade/api/: api.py  apps.py  schemas.py
pixellemonade/api/tests/: test_album_endpoint.py  test_albums_endpoint.py  test_photo_endpoint.py  test_photos_endpoint.py
pixellemonade/canva/: admin.py  api.py  apps.py  models.py  schemas.py  urls.py  views.py
pixellemonade/canva/migrations/: 0001_initial.py  0002_alter_canvauser_added_on.py
pixellemonade/canva/tests/: test_authenication.py
pixellemonade/cms/: apps.py  urls.py  views.py
pixellemonade/cms/components/: search.py  tagger.py
pixellemonade/cms/tests/: test_cms_tagger.py
pixellemonade/core/: admin.py  apps.py  celery.py  storages.py  tasks.py  urls.py  views.py
pixellemonade/core/migrations/: 0001_initial.py  0002_alter_photo_image_hash.py  0003_photoview_photodownload.py  0004_uploader_full_name.py  0005_photodownload_session_photoview_session.py  (+9 more)
pixellemonade/pixellemonade_api/: api.py  apps.py  schemas.py
pixellemonade/pixellemonade_cms/: apps.py  urls.py  views.py
pixellemonade/prodigi/: admin.py  apps.py  models.py  urls.py  views.py
pixellemonade/settings/: settings.py
(+95 files in other folders)
