# setup.cfg
[metadata]
name = pixellemonade
version = 0.0.1
description = A easy app to manage photo albums
long_description = file:README.md
url =
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.9
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django>=4.1
    django-hashid-field>=3.3.7
    django-imagekit>=5.0.0
    django-ninja>=0.21.0
    exif>=1.6.0
    IPTCInfo3>=2.1.4
    django-unicorn>=0.50.0
    user-agents>=2.2.0